[package]
name = "dir_input"
version = "1.0.2"
authors = ["Luke Wilkinson <wilkinsonluke@proton.me>"]
edition = "2021"
license = "GPL-3.0"
keywords = ["input", "error", "validation"]
description = "Simple library to handle input directory inputs on linux"
repository = "https://github.com/TT1882/dir_input"

[dependencies]
simple-home-dir = "0.4.6"